# ivp-cronogramas

./: main.py  pyproject.toml
src/: 01_programacion_actividades.xlsx  asignacion_financiera.ipynb  borrar.json  borrar2.json  calendario_actividades.xlsx  main.ipynb  output.xlsx  pruebas.ipynb
src/data/cabanaconde/: carga_trabajo_reajustada.yaml  datos.yaml  partidas.yaml
src/data/cabanaconde_inicial.yaml/: datos.yaml
src/data/cabanaconde_vigente/: datos.yaml
src/data/calla_calla_vigente/: datos.yaml
src/data/callacalla_inicial/: carga_trabajo_reajustada.yaml  datos.yaml
src/data/callacalla_vigente/: partidas.yaml
src/data/canocota_inicial/: carga_trabajo_reajustada.yaml  datos.yaml
src/data/canocota_vigente/: datos.yaml  partidas.yaml
src/data/ccanaseta_inicial/: carga_trabajo_reajustada.yaml  datos.yaml
src/data/ccanaseta_vigente/: datos.yaml  partidas.yaml
src/data/misanayoc_inicial/: carga_trabajo_reajustada.yaml  datos.yaml
src/data/misanayoc_vigente/: datos.yaml  partidas.yaml
src/data/sibayo_fake/: datos.yaml  (+1 more)
src/output/: cabanaconde.xlsx  cabanaconde_inicial.xlsx  cabanaconde_vigente.xlsx  callacalla_inicial.xlsx  callacalla_vigente.xlsx  canocota_inicial.xlsx  canocota_vigente.xlsx  ccanaseta_inicial.xlsx  ccanaseta_vigente.xlsx  misanayoc_inicial.xlsx  misanayoc_vigente.xlsx  sibayo_inicial.xlsx  sibayo_vigente.xlsx  sibayo_vigente_v2.xlsx
src/output2/: cabanaconde_vigente.pkl  callacalla_vigente.pkl  canocota_vigente.pkl  ccanaseta_vigente.pkl  misanayoc_vigente.pkl  sibayo_vigente.pkl
src/utils/: excel_data.xlsx
(+3 files in other folders)
