[project]
name = "cronogramas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "pulp>=3.1.1",
    "pyyaml>=6.0.2",
    "xlsxwriter>=3.2.3",
]
